8232656: SEGV in very large arrays of inline classes